[gd_scene load_steps=61 format=2]

[ext_resource path="res://scenes/References.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/DeterminationMonoWebRegular-Z5oq.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Mr Poly.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/menu/Menu.gd" type="Script" id=4]
[ext_resource path="res://scripts/other/TypeText.gd" type="Script" id=5]
[ext_resource path="res://scripts/menu/Buttons.gd" type="Script" id=6]
[ext_resource path="res://scenes/Soul.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Real Soul.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/buttons/ITEM selected.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons/MERCY.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons/FIGHT selected.png" type="Texture" id=11]
[ext_resource path="res://sprites/buttons/ITEM.png" type="Texture" id=12]
[ext_resource path="res://sprites/buttons/ACT selected.png" type="Texture" id=13]
[ext_resource path="res://sprites/buttons/ACT.png" type="Texture" id=14]
[ext_resource path="res://sprites/buttons/MERCY selected.png" type="Texture" id=15]
[ext_resource path="res://sprites/buttons/FIGHT.png" type="Texture" id=16]
[ext_resource path="res://scripts/menu/Monlist.gd" type="Script" id=17]
[ext_resource path="res://scripts/menu/Actlist.gd" type="Script" id=18]
[ext_resource path="res://scripts/menu/Inventory.gd" type="Script" id=19]
[ext_resource path="res://scripts/other/ActSystem.gd" type="Script" id=20]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=21]
[ext_resource path="res://scripts/other/BoxCollision.gd" type="Script" id=23]
[ext_resource path="res://scripts/other/Battle.gd" type="Script" id=27]
[ext_resource path="res://scripts/attacks/Attacks.gd" type="Script" id=28]
[ext_resource path="res://scripts/enemies/Enemies.gd" type="Script" id=29]
[ext_resource path="res://scripts/menu/Mercylist.gd" type="Script" id=30]
[ext_resource path="res://scenes/ItemSystem.tscn" type="PackedScene" id=31]
[ext_resource path="res://audio/opt move.wav" type="AudioStream" id=32]
[ext_resource path="res://scripts/menu/Fightlist.gd" type="Script" id=34]
[ext_resource path="res://RichTextHide.gd" type="Script" id=36]
[ext_resource path="res://sprites/MaskTexture.png" type="Texture" id=37]
[ext_resource path="res://sprites/refs/ut health bg.png" type="Texture" id=38]
[ext_resource path="res://scripts/attacks/AttackMask.gd" type="Script" id=39]
[ext_resource path="res://audio/menu print.wav" type="AudioStream" id=40]
[ext_resource path="res://audio/opt_select.wav" type="AudioStream" id=41]
[ext_resource path="res://audio/heal.wav" type="AudioStream" id=42]
[ext_resource path="res://audio/soul damge.wav" type="AudioStream" id=43]
[ext_resource path="res://sprites/soul/Other/Soul fleeing.png" type="Texture" id=57]
[ext_resource path="res://audio/snd_damage.wav" type="AudioStream" id=58]
[ext_resource path="res://audio/fleed.wav" type="AudioStream" id=60]
[ext_resource path="res://audio/mon vaporized.mp3" type="AudioStream" id=61]

[sub_resource type="Animation" id=101]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:offset_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=102]
resource_name = "shake"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.03, 0.0, 0.03, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 0.03, 0.03, 0.0 ]
}

[sub_resource type="Animation" id=100]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0.01, 0.01, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_detail = 1
shadow_color = Color( 1, 1, 1, 0.6 )
anti_aliasing = false

[sub_resource type="Animation" id=55]
resource_name = "squarebox"
length = 0.61
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 287.0, 85 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -288.0, -80 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10, 10.0, -15 ]
}

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=26]
size = 32
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[sub_resource type="RichTextEffect" id=59]
script = ExtResource( 36 )

[sub_resource type="PhysicsMaterial" id=11]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2.5, 320.25 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 369.5, 2.5 )

[sub_resource type="DynamicFont" id=50]
size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=52]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=62]
bg_color = Color( 0, 1, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=63]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Battle" type="Node2D" groups=["root"]]
position = Vector2( 320, 240 )
script = ExtResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="References" parent="." instance=ExtResource( 1 )]
self_modulate = Color( 1, 1, 1, 0.498039 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="Anim" type="AnimationPlayer" parent="Camera"]
anims/RESET = SubResource( 101 )
anims/shake = SubResource( 102 )

[node name="Black" type="Polygon2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 2
color = Color( 0, 0, 0, 1 )
invert_border = 0.1
polygon = PoolVector2Array( -320, -240, 320, -240, 320, 240, -320, 240 )

[node name="Soul" parent="." instance=ExtResource( 7 )]

[node name="SoulFleeing" type="Sprite" parent="."]
position = Vector2( -248, 75 )
z_index = 1
texture = ExtResource( 57 )
hframes = 2

[node name="Anim" type="AnimationPlayer" parent="SoulFleeing"]
anims/walk = SubResource( 100 )

[node name="FleeSnd" type="AudioStreamPlayer" parent="SoulFleeing"]
stream = ExtResource( 60 )

[node name="Attacks" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 28 )
uniform_inv = true
defdmg = 2
definv = 2.0
uniform_colors = true

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 29 )

[node name="Mr Poly" parent="Enemies" instance=ExtResource( 3 )]

[node name="Real Soul" parent="Enemies" instance=ExtResource( 8 )]

[node name="Sounds" type="Node2D" parent="Enemies"]

[node name="MonHit" type="AudioStreamPlayer" parent="Enemies/Sounds"]
stream = ExtResource( 58 )
volume_db = -2.0
pitch_scale = 1.2

[node name="DustingSnd" type="AudioStreamPlayer" parent="Enemies/Sounds"]
stream = ExtResource( 61 )

[node name="Menu" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Sounds" type="Node2D" parent="Menu"]
unique_name_in_owner = true

[node name="SelectSnd" type="AudioStreamPlayer" parent="Menu/Sounds"]
stream = ExtResource( 41 )

[node name="FocusSnd" type="AudioStreamPlayer" parent="Menu/Sounds"]
stream = ExtResource( 32 )

[node name="Box" type="Panel" parent="Menu"]
margin_left = -288.0
margin_top = 10.0
margin_right = 287.0
margin_bottom = 150.0
rect_clip_content = true
custom_styles/panel = SubResource( 18 )

[node name="Mask" type="Light2D" parent="Menu/Box"]
position = Vector2( 5, 5 )
scale = Vector2( 565, 130 )
z_index = 1
texture = ExtResource( 37 )
mode = 3
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2
script = ExtResource( 39 )
__meta__ = {
"_edit_lock_": true
}

[node name="Boxanim" type="AnimationPlayer" parent="Menu/Box"]
anims/squarebox = SubResource( 55 )

[node name="Menutext" type="RichTextLabel" parent="Menu/Box"]
pause_mode = 2
visible = false
margin_left = 18.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 231.0
rect_clip_content = false
custom_fonts/mono_font = SubResource( 25 )
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true
bbcode_text = "* Hello."
meta_underlined = false
tab_size = 3
text = "* Hello."
fit_content_height = true
scroll_active = false
custom_effects = [ SubResource( 59 ) ]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Menu/Box/Menutext"]
wait_time = 0.03
autostart = true

[node name="TypeSnd" type="AudioStreamPlayer" parent="Menu/Box/Menutext"]
stream = ExtResource( 40 )
volume_db = -5.0

[node name="Collision" type="StaticBody2D" parent="Menu"]
position = Vector2( 0, -1 )
physics_material_override = SubResource( 11 )
script = ExtResource( 23 )
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="CollisionShape2D" parent="Menu/Collision"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -285.5, 70 )
shape = SubResource( 13 )

[node name="Mask" type="Light2D" parent="Menu/Collision/Left"]
visible = false
position = Vector2( -385.886, 14.5435 )
scale = Vector2( 258.909, 31.902 )
texture = ExtResource( 38 )
color = Color( 0, 0, 0, 0 )
mode = 3
range_item_cull_mask = 2

[node name="Polygon" type="Polygon2D" parent="Menu/Collision/Left"]
visible = false
color = Color( 0.847059, 0.243137, 0.243137, 1 )
polygon = PoolVector2Array( -2.5, -320, 2.5, -320, 2.5, 320, -2.5, 320 )

[node name="Top" type="CollisionShape2D" parent="Menu/Collision"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 13.5 )
shape = SubResource( 14 )

[node name="Mask" type="Light2D" parent="Menu/Collision/Top"]
visible = false
position = Vector2( -16.0666, -282.799 )
scale = Vector2( 279.633, 27.1852 )
texture = ExtResource( 38 )
color = Color( 0, 0, 0, 0 )
energy = 0.0
mode = 3
range_item_cull_mask = 2

[node name="Polygon" type="Polygon2D" parent="Menu/Collision/Top"]
visible = false
rotation = 4.71239
scale = Vector2( 1, 1.15719 )
color = Color( 0.847059, 0.243137, 0.243137, 1 )
polygon = PoolVector2Array( -2.5, -320, 2.5, -320, 2.5, 320, -2.5, 320, -2.5, 165.919 )

[node name="Right" type="CollisionShape2D" parent="Menu/Collision"]
process_priority = 2
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 284.5, 70.75 )
shape = SubResource( 13 )

[node name="Mask" type="Light2D" parent="Menu/Collision/Right"]
visible = false
position = Vector2( 102.48, 142.407 )
scale = Vector2( 69.8192, 19.6531 )
texture = ExtResource( 38 )
color = Color( 0, 0, 0, 0 )
mode = 3
range_item_cull_mask = 2

[node name="Polygon" type="Polygon2D" parent="Menu/Collision/Right"]
visible = false
color = Color( 0.847059, 0.243137, 0.243137, 1 )
polygon = PoolVector2Array( 2.25, 320.25, -2.75, 320.25, -2.75, -320.75, 2.25, -320.75 )

[node name="Bottom" type="CollisionShape2D" parent="Menu/Collision"]
process_priority = 2
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -3.5, 148.5 )
shape = SubResource( 14 )
one_way_collision_margin = 0.0

[node name="Mask2" type="Light2D" parent="Menu/Collision/Bottom"]
visible = false
position = Vector2( -12.567, 282.581 )
scale = Vector2( 279.633, 27.1852 )
texture = ExtResource( 38 )
color = Color( 0, 0, 0, 0 )
energy = 0.0
mode = 3
range_item_cull_mask = 2

[node name="Polygon" type="Polygon2D" parent="Menu/Collision/Bottom"]
visible = false
rotation = 4.71239
scale = Vector2( 1, 1.15719 )
color = Color( 0.847059, 0.243137, 0.243137, 1 )
polygon = PoolVector2Array( -2.5, -320, 2.5, -320, 2.5, 320, -2.5, 320, -2.5, 165.919 )

[node name="Options" type="Node2D" parent="Menu"]

[node name="Fight" type="Node2D" parent="Menu/Options"]

[node name="Monlist" type="ItemList" parent="Menu/Options/Fight" groups=["monlist", "optlist"]]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 145.0
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_constants/line_separation = 0
custom_fonts/font = SubResource( 50 )
max_columns = 2
same_column_width = true
fixed_column_width = 252
icon_scale = 0.0
script = ExtResource( 34 )

[node name="Left" type="RichTextLabel" parent="Menu/Options/Fight/Monlist"]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 104.0
rect_clip_content = false
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"

[node name="HealthBar1" type="ProgressBar" parent="Menu/Options/Fight/Monlist/Left"]
visible = false
margin_left = 360.0
margin_top = 10.0
margin_right = 461.0
margin_bottom = 27.0
custom_styles/fg = SubResource( 62 )
custom_styles/bg = SubResource( 63 )
value = 100.0
percent_visible = false

[node name="HealthBar2" type="ProgressBar" parent="Menu/Options/Fight/Monlist/Left"]
visible = false
margin_left = 360.0
margin_top = 42.0
margin_right = 461.0
margin_bottom = 59.0
custom_styles/fg = SubResource( 62 )
custom_styles/bg = SubResource( 63 )
value = 100.0
percent_visible = false

[node name="HealthBar3" type="ProgressBar" parent="Menu/Options/Fight/Monlist/Left"]
visible = false
margin_left = 360.0
margin_top = 73.0
margin_right = 461.0
margin_bottom = 90.0
custom_styles/fg = SubResource( 62 )
custom_styles/bg = SubResource( 63 )
value = 100.0
percent_visible = false

[node name="Right" type="RichTextLabel" parent="Menu/Options/Fight/Monlist"]
visible = false
margin_left = 256.0
margin_top = 1.0
margin_right = 494.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"

[node name="Panel" type="Panel" parent="Menu/Options/Fight/Monlist"]
show_behind_parent = true
margin_left = -61.0
margin_top = -14.0
margin_right = 504.0
margin_bottom = 116.0
__meta__ = {
"_edit_lock_": true
}

[node name="Act" type="Node2D" parent="Menu/Options"]

[node name="Monlist" type="ItemList" parent="Menu/Options/Act" groups=["monlist", "optlist"]]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 145.0
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_constants/line_separation = 0
custom_fonts/font = SubResource( 50 )
max_columns = 2
same_column_width = true
fixed_column_width = 252
icon_scale = 0.0
script = ExtResource( 17 )

[node name="Left" type="RichTextLabel" parent="Menu/Options/Act/Monlist"]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"

[node name="Right" type="RichTextLabel" parent="Menu/Options/Act/Monlist"]
margin_left = 256.0
margin_top = 1.0
margin_right = 494.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"

[node name="Panel" type="Panel" parent="Menu/Options/Act/Monlist"]
show_behind_parent = true
margin_left = -61.0
margin_top = -14.0
margin_right = 504.0
margin_bottom = 116.0

[node name="Mr Poly" type="ItemList" parent="Menu/Options/Act" groups=["optlist"]]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 145.0
custom_colors/guide_color = Color( 1, 1, 1, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_constants/line_separation = 0
custom_fonts/font = SubResource( 50 )
items = [ "Check", null, false, "Marry", null, false, "Add node", null, false ]
max_columns = 2
same_column_width = true
fixed_column_width = 252
icon_scale = 0.0
script = ExtResource( 18 )

[node name="Left" type="RichTextLabel" parent="Menu/Options/Act/Mr Poly"]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"
scroll_active = false

[node name="Right" type="RichTextLabel" parent="Menu/Options/Act/Mr Poly"]
margin_left = 256.0
margin_top = 1.0
margin_right = 494.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"
scroll_active = false

[node name="Panel" type="Panel" parent="Menu/Options/Act/Mr Poly"]
show_behind_parent = true
margin_left = -61.0
margin_top = -14.0
margin_right = 504.0
margin_bottom = 116.0

[node name="Real Soul" type="ItemList" parent="Menu/Options/Act" groups=["optlist"]]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 145.0
custom_colors/guide_color = Color( 1, 1, 1, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_constants/line_separation = 0
custom_fonts/font = SubResource( 50 )
items = [ "Check", null, false, "Call out", null, false ]
max_columns = 2
same_column_width = true
fixed_column_width = 252
icon_scale = 0.0
script = ExtResource( 18 )

[node name="Left" type="RichTextLabel" parent="Menu/Options/Act/Real Soul"]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"
scroll_active = false

[node name="Right" type="RichTextLabel" parent="Menu/Options/Act/Real Soul"]
margin_left = 256.0
margin_top = 1.0
margin_right = 494.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"
scroll_active = false

[node name="Panel" type="Panel" parent="Menu/Options/Act/Real Soul"]
show_behind_parent = true
margin_left = -61.0
margin_top = -14.0
margin_right = 504.0
margin_bottom = 116.0

[node name="Items" type="Node2D" parent="Menu/Options"]

[node name="Inventory" type="ItemList" parent="Menu/Options/Items" groups=["optlist"]]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 145.0
custom_colors/guide_color = Color( 1, 1, 1, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_constants/line_separation = 0
custom_fonts/font = SubResource( 50 )
max_columns = 2
same_column_width = true
fixed_column_width = 252
icon_scale = 0.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Left" type="RichTextLabel" parent="Menu/Options/Items/Inventory"]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*"
text = "*
*"
scroll_active = false

[node name="Right" type="RichTextLabel" parent="Menu/Options/Items/Inventory"]
margin_left = 256.0
margin_top = 1.0
margin_right = 494.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*"
text = "*
*"
scroll_active = false

[node name="Page" type="RichTextLabel" parent="Menu/Options/Items/Inventory"]
margin_left = 288.0
margin_top = 65.0
margin_right = 485.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"
scroll_active = false

[node name="Panel" type="Panel" parent="Menu/Options/Items/Inventory"]
show_behind_parent = true
margin_left = -61.0
margin_top = -14.0
margin_right = 504.0
margin_bottom = 116.0

[node name="Mercy" type="Node2D" parent="Menu/Options"]

[node name="Optlist" type="ItemList" parent="Menu/Options/Mercy" groups=["optlist"]]
self_modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 145.0
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_constants/line_separation = 0
custom_fonts/font = SubResource( 50 )
items = [ "Spare", null, false, "Flee", null, false ]
max_columns = 2
same_column_width = true
fixed_column_width = 252
icon_scale = 0.0
script = ExtResource( 30 )

[node name="Left" type="RichTextLabel" parent="Menu/Options/Mercy/Optlist"]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "* Spare[fill]* Flee"
text = "* Spare* Flee"

[node name="Right" type="RichTextLabel" parent="Menu/Options/Mercy/Optlist"]
margin_left = 256.0
margin_top = 1.0
margin_right = 494.0
margin_bottom = 104.0
custom_constants/line_separation = -1
custom_fonts/normal_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "*
*
*"
text = "*
*
*"

[node name="Panel" type="Panel" parent="Menu/Options/Mercy/Optlist"]
show_behind_parent = true
margin_left = -61.0
margin_top = -14.0
margin_right = 504.074
margin_bottom = 116.0

[node name="Buttons" type="Control" parent="Menu"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="FIGHT" type="AnimatedSprite" parent="Menu/Buttons"]
position = Vector2( -233, 213 )
frames = SubResource( 49 )

[node name="ACT" type="AnimatedSprite" parent="Menu/Buttons"]
position = Vector2( -80, 213 )
frames = SubResource( 48 )

[node name="ITEM" type="AnimatedSprite" parent="Menu/Buttons"]
position = Vector2( 80, 213 )
frames = SubResource( 47 )

[node name="MERCY" type="AnimatedSprite" parent="Menu/Buttons"]
position = Vector2( 235, 213 )
frames = SubResource( 46 )

[node name="HUD" parent="." instance=ExtResource( 21 )]

[node name="ActSystem" type="Node" parent="."]
script = ExtResource( 20 )

[node name="ItemSystem" parent="." instance=ExtResource( 31 )]

[node name="HitSnd" type="AudioStreamPlayer" parent="ItemSystem"]
stream = ExtResource( 43 )

[node name="HealSnd" type="AudioStreamPlayer" parent="ItemSystem"]
stream = ExtResource( 42 )

[node name="Tween" type="Tween" parent="."]

[connection signal="rtypefin" from="Enemies" to="Enemies" method="_on_Enemies_rtypefin"]
[connection signal="buttons" from="Menu" to="Menu" method="_on_Menu_buttons"]
[connection signal="buttons" from="Menu" to="Menu/Options/Mercy/Optlist" method="_on_Menu_buttons"]
[connection signal="buttons" from="Menu" to="Menu/Buttons" method="_on_Menu_buttons"]
[connection signal="cdepth_change" from="Menu" to="Menu" method="_on_Menu_cdepth_change"]
[connection signal="monsterscene" from="Menu" to="." method="_on_Menu_monsterscene"]
[connection signal="monsterscene" from="Menu" to="Attacks" method="_on_Menu_monsterscene"]
[connection signal="monsterscene" from="Menu" to="Enemies" method="_on_Menu_monsterscene"]
[connection signal="monsterturn" from="Menu" to="." method="_on_Menu_monsterturn"]
[connection signal="monsterturn" from="Menu" to="Attacks" method="_on_Menu_monsterturn"]
[connection signal="timeout" from="Menu/Box/Menutext/Timer" to="Menu/Box/Menutext" method="_on_Timer_timeout"]
[connection signal="spared" from="Menu/Options/Mercy/Optlist" to="Enemies" method="_on_Optlist_spared"]
[connection signal="pressed" from="Menu/Buttons" to="Menu" method="_on_Buttons_pressed"]
